--- a/src/adminCss/sidebar/adminsidebar.css
+++ b/src/adminCss/sidebar/adminsidebar.css
@@ -1,26 +1,23 @@
-.main_admin_sidebar{
+/* .main_admin_sidebar{
     background: var(--gay-bg-color);
-    max-width: 450px;
-    min-width:400px;
+    max-width: 200px;
     height: 100vh;
 }
 .admin_sidebar{
     padding: 10px 0px;
 }
 .admin_sidebar_header_logo_img{
-    /* width: 70%; */
 }
 
 
-/* menu */
 
 .admin_sidebar_menu_list{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    font-size: 24px;
+    font-size: 22px;
     color: var(--main-white-color);
-    padding-left: 20px;
+    padding-left: 10px;
 }
 .admin_sidebar_menu_items{
     width: 100%;
@@ -38,4 +35,87 @@
 .admin_sidebar_menu_items.selected {
     background: white;
     color: black;
-}
+} */
+
+/* adminsidebar.css */
+.main_admin_sidebar {
+    width: 240px;
+    background-color: var(--primary-color);
+    color: white;
+    position: relative;
+    transition: width 0.5s;
+  }
+  
+  .admin_sidebar {
+    height: 100vh;
+    overflow-y: auto;
+  }
+  
+  .admin_sidebar_header {
+    padding: 20px;
+    text-align: center;
+    border-bottom: 1px solid var(--secondary-color);
+  }
+  
+  .admin_sidebar_header_logo img {
+    max-width: 100%;
+  }
+  
+  .admin_sidebar_menu_list {
+    padding: 20px;
+  }
+  
+  .admin_sidebar_menu_items {
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .admin_sidebar_menu_items.selected {
+    background-color: var(--secondary-color);
+  }
+  
+  .toggleButton {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    padding: 5px 10px;
+    background-color: var(--secondary-color);
+    color: white;
+    border: none;
+    cursor: pointer;
+    z-index: 1000;
+  }
+  
+  .closed {
+    width: 50px;
+  }
+  
+  .closed .admin_sidebar_menu_list {
+    display: none;
+  }
+  
+  /* Styling Links */
+  .Link_tag {
+    text-decoration: none;
+    color: white;
+  }
+  
+  .Link_tag:hover {
+    text-decoration: underline;
+  }
+  
+  /* Styling for submenu items */
+  .admin_sidebar_submenu {
+    padding-left: 20px;
+  }
+  
+  .admin_sidebar_submenu_items {
+    padding: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .admin_sidebar_submenu_items:hover {
+    background-color: var(--secondary-color);
+  }
