--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,4 +1,4 @@
-.main_login_page_div{
+/* .main_login_page_div{
   height: 100vh;
   display: flex;
   align-items: center;
@@ -37,16 +37,6 @@
   }
   
  
-  /* .login_inputContainer input:focus {
-    border: 1px rgb(0, 136, 255) solid;
-    outline: none;
-  } */
-  
-  /* .login_inputContainer input:focus::placeholder {
-    color: rgb(0, 136, 255);
-  }
-  
-  */
   
   .submit {
     width: 500px;
@@ -56,10 +46,7 @@
     margin-top: 101px;
     transition: .3s;
   }
-  
-  /* .submit:focus + .email {
-    display: none;
-  } */
+
   
   .login {
     width: 100%;
@@ -86,7 +73,6 @@
     border-radius: 20px;
     cursor: pointer;
     transition: .3s;
-    /* margin-top: 50px; */
   }
   
   .forget:hover {
@@ -109,4 +95,131 @@
   }
   .login_input{
 
+  } */
+
+
+
+.main_login_page_div_admin{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+  .form_main {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    padding: 30px 30px 30px 30px;
+    /* box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.062); */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position: relative;
+    overflow: hidden;
   }
+  
+  .form_main::before {
+    position: absolute;
+    content: "";
+    width: 300px;
+    height: 400px;
+    /* background-color: rgb(209, 193, 255); */
+    background-color: var(--gay-bg-color);
+    transform: rotate(45deg);
+    left: -180px;
+    bottom: 30px;
+    z-index: 1;
+    border-radius: 30px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.082);
+  }
+  
+  .heading {
+    font-size: 2em;
+    color: #2e2e2e;
+    font-weight: 700;
+    margin: 5px 0 10px 0;
+    z-index: 2;
+  }
+  
+  .inputContainer {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+  }
+  
+  .inputIcon {
+    position: absolute;
+    left: 3px;
+  }
+  
+  .inputField {
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid rgb(173, 173, 173);
+    margin: 10px 0;
+    color: black;
+    font-size: .8em;
+    font-weight: 500;
+    box-sizing: border-box;
+    padding: 20px 30px;
+  }
+  
+  .inputField:focus {
+    outline: none;
+    border-bottom: 2px solid rgb(199, 114, 255);
+  }
+  
+  .inputField::placeholder {
+    color: rgb(80, 80, 80);
+    font-size: 1em;
+    font-weight: 500;
+  }
+  
+  #button {
+    z-index: 2;
+    position: relative;
+    width: 100%;
+    border: none;
+    /* background-color: rgb(162, 104, 255); */
+    background-color: #5fa4a7;
+    height: 40px;
+    color: rgb(3, 2, 2);
+    font-size: .8em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin: 10px;
+    cursor: pointer;
+  }
+  
+  #button:hover {
+    background-color: #5fa4a7;
+  }
+  .foget_pass_link{
+text-decoration: none;
+color: #5fa4a7;
+  }
+  
+ 
+  
+.loginloader {
+  width: 120px;
+  height: 24px;
+  -webkit-mask:
+    radial-gradient(circle closest-side,#000 94%,#0000) 0 0/25% 100%,
+    linear-gradient(#000 0 0) center/calc(100% - 12px) calc(100% - 12px) no-repeat;
+  background:
+   linear-gradient(#25b09b 0 0) 0/0% no-repeat
+   #ddd;
+  animation: l7 2s infinite linear;
+}
+@keyframes l7 {
+    100% {background-size:100%}
+}
