update loader and fix some issue

--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -4,18 +4,41 @@
   justify-content: center;
   align-items: center;
 }
-
-.loader {
-  width: 100px;
-  height: 100px;
-  aspect-ratio: 1;
-  --_c: no-repeat radial-gradient(farthest-side, #bd5ca0 92%, #0000);
-  background: var(--_c) top, var(--_c) left, var(--_c) right, var(--_c) bottom;
-  background-size: 12px 12px;
-  animation: l7 1s infinite;
-}
-@keyframes l7 {
-  to {
-    transform: rotate(0.5turn);
+.loader_svg {
+  width: 3.25em;
+  transform-origin: center;
+  animation: rotate4 2s linear infinite;
+ }
+ 
+ .cercle_loader {
+  fill: none;
+  stroke: hsl(214, 97%, 59%);
+  stroke-width: 2;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  animation: dash4 1.5s ease-in-out infinite;
+ }
+ 
+ @keyframes rotate4 {
+  100% {
+   transform: rotate(360deg);
   }
-}
+ }
+ 
+ @keyframes dash4 {
+  0% {
+   stroke-dasharray: 1, 200;
+   stroke-dashoffset: 0;
+  }
+ 
+  50% {
+   stroke-dasharray: 90, 200;
+   stroke-dashoffset: -35px;
+  }
+ 
+  100% {
+   stroke-dashoffset: -125px;
+  }
+ }
+ 
