--- a/src/adminCss/adminUpdateProduct.css
+++ b/src/adminCss/adminUpdateProduct.css
@@ -60,7 +60,7 @@
 .update-product-container form .image_wrapper img {
   width: 100px;
   height: 100px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 5px;
 }
 
